testsuite/escript/classes/fail-no-ctor-01.err
fail-no-ctor-01.src:4:12: error: In function call: Class 'Animal' does not expose a constructor.