testsuite/escript/classes/fail-no-ctor-01.src
class Animal()
endclass

var obj := Animal();
print( obj );
